syntax = "proto3";

option go_package = "github.com/silverflin/reviews-microservice";

package proto;

service Reviews {
  rpc GetMarketReviews(GetMarketReviewsRequest) returns (ReviewsResponse);
  rpc CreateReview(CreateReviewRequest) returns (CreateReviewResponse);
}

message GetMarketReviewsRequest {
  string market_id = 1;
}

message ReviewsResponse {
  repeated Review reviews = 1;
}

message Review {
  string id = 1;
  string market_id = 2;
  string user_id = 3;
  string content = 4;
  int32 rating = 5;
  string created_at = 6;
}

message CreateReviewRequest {
  string market_id = 1;
  string user_id = 2;
  string content = 3;
  int32 rating = 4;
}

message CreateReviewResponse {
  Review review = 1;
}
